# crates/kairo-daemon/src/api/mod.rs
@@ -28,6 +28,10 @@ pub fn router(state: AppState) -> Router {
         .route("/api/v1/version", get(handlers::version::handler))
         .route("/api/v1/status", get(handlers::status::handler))
         .route("/api/v1/actors/:id", get(handlers::actors::handler))
+        .route(
+            "/api/v1/actors/:id/statements",
+            get(handlers::actors::list_statements_handler),
+        )
         .route("/api/v1/objects/:id", get(handlers::objects::handler))
         .route("/api/v1/statements/:id", get(handlers::statements::handler))
         .route(
